--- a/Backgroud-CSS/background.css
+++ b/Backgroud-CSS/background.css
@@ -2,8 +2,8 @@ body {
   height: 200vh;
 }
 .banner {
-  width: 1920px;
-  height: 800px;
+  width: 2000px;
+  height: 2000px;
   background-image: url("https://cdn.xtmobile.vn/vnt_upload/news/06_2024/21/thanh-guom-diet-quy-xtmobile.jpg");
   /* mặc định khi ảnh kích thước nhỏ hơn box thì nó sẽ bị lặp lại */
   background-repeat: no-repeat;
@@ -15,5 +15,5 @@ body {
   /* Vị trí của hình nền */
   background-position: center center;
 
-  background-attachment: fixed;
+  /*background-attachment: fixed;*/
 }
