--- a/Catering/style.css
+++ b/Catering/style.css
@@ -60,6 +60,7 @@ header {
   width: 60%;
   margin: auto;
   margin-top: 3%;
+  margin-bottom: 3%;
   display: flex;
   padding: 20px;
 }
@@ -67,6 +68,7 @@ header {
 .image {
   width: 50%;
   padding-right: 20px;
+  border-radius: 5px;
 }
 
 .image img {
@@ -81,7 +83,7 @@ header {
   padding: 20px;
 }
 .content h1 {
-  font-size: 50px;
+  font-size: 36px;
   margin-bottom: 50px;
   text-align: center;
   font-weight: 50;
@@ -89,7 +91,7 @@ header {
 }
 
 .content h2 {
-  font-size: 21px;
+  font-size: 16px;
   line-height: 1.6;
   margin-bottom: 30px;
   text-align: center;
@@ -98,10 +100,49 @@ header {
 }
 
 .content p {
-  font-size: 20px;
+  font-size: 16px;
   line-height: 1.6;
   margin-bottom: 30px;
 }
 .transparent {
   color: rgba(0, 0, 0, 0.4);
+}
+
+#menu {
+  width: 60%;
+  margin: auto;
+  margin-top: 3%;
+  margin-bottom: 3%;
+  display: flex;
+  padding: 20px;
+}
+.content-menu {
+  width: 50%;
+  padding-left: 20px;
+  padding: 20px;
+}
+.content-menu h1 {
+  font-size: 36px;
+  margin-bottom: 50px;
+  text-align: center;
+  font-weight: 50;
+  letter-spacing: 4px;
+}
+.content-menu h4 {
+  font-size: 20px;
+  margin-bottom: 20px;
+  font-weight: 50;
+  letter-spacing: 6px;
+}
+.content-menu h6 {
+  font-size: 15px;
+  margin-bottom: 60px;
+  font-weight: 20;
+  color: rgba(0, 0, 0, 0.4);
+}
+.line {
+  height: 1px;
+  width: 70%;
+  background-color: rgba(0, 0, 0, 0.4);
+  margin: auto;
 }
